--- a/app/src/main/res/layout/fragment_page_feeds.xml
+++ b/app/src/main/res/layout/fragment_page_feeds.xml
@@ -1,9 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
+    <FrameLayout
+        android:id="@+id/feed_top_bar"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@drawable/feed_top_bar">
+        <TextView
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="FEEDS"/>
 
+    </FrameLayout>
 
     <ListView
+        android:layout_marginTop="42dp"
         android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
