--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,55 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    android:orientation="vertical"
+    android:gravity="center">
+
     <ImageView
-        android:src="@drawable/logo"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:src="@drawable/logo" />
+
     <fragment
         android:id="@+id/frag_login_name"
+        class="com.example.z.helloworld.fragments.VersionFragment.SimpleTextInputCellFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        class="com.example.z.helloworld.fragments.VersionFragment.SimpleTextInputCellFragment"
-        tools:layout="@layout/fragment_inputcell_simpletext"
-        />
+        tools:layout="@layout/fragment_inputcell_simpletext" />
+
     <fragment
         android:id="@+id/frag_login_pwd"
+        class="com.example.z.helloworld.fragments.VersionFragment.SimpleTextInputCellFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        class="com.example.z.helloworld.fragments.VersionFragment.SimpleTextInputCellFragment"
-        tools:layout="@layout/fragment_inputcell_simpletext"
-        />
+        tools:layout="@layout/fragment_inputcell_simpletext" />
+
     <TextView
         android:id="@+id/login_textview_forget_pwd"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="忘记密码"
-        android:textColor="@color/colorPrimary"
         android:gravity="right"
-        />
+        android:text="忘记密码"
+        android:textColor="@color/colorPrimary" />
+
     <LinearLayout
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <Button
+            android:id="@+id/login_btn_signIn"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginRight="5dp"
             android:layout_weight="0.5"
             android:text="登录"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/login_btn_signIn"
 
             />
+
         <Button
-            android:layout_weight="0.5"
-            android:text="注册"
+            android:id="@+id/login_btn_signUp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/login_btn_signUp"
+            android:layout_marginLeft="5dp"
+            android:layout_weight="0.5"
+            android:text="注册"
 
             />
     </LinearLayout>
-
 </LinearLayout>
