--- a/app/src/main/res/layout/fragment_page_me.xml
+++ b/app/src/main/res/layout/fragment_page_me.xml
@@ -3,10 +3,13 @@
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:layout_gravity="center">
     <com.example.z.helloworld.fragments.VersionFragment.pages.AvatarView
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="80dp"
         android:id="@+id/avatar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_width="120dp"
+        android:layout_height="120dp" />
     <TextView
+        android:id="@+id/txet_me"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="me"/>
