--- a/app/src/main/res/layout/fragment_forget_password_step1.xml
+++ b/app/src/main/res/layout/fragment_forget_password_step1.xml
@@ -9,7 +9,7 @@
     android:id="@+id/step1_frag_email"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    class="com.example.z.helloworld.fragments.VersionFragment.ForgetPasswordFragment"
+    class="com.example.z.helloworld.fragments.VersionFragment.SimpleTextInputCellFragment"
     tools:layout="@layout/fragment_inputcell_simpletext"
     />
     <Button
