--- a/app/src/main/res/layout/fragment_forget_password_step1.xml
+++ b/app/src/main/res/layout/fragment_forget_password_step1.xml
@@ -6,10 +6,10 @@
     android:layout_height="match_parent"
     android:layout_marginTop="120dp">
 <fragment
-    android:id="@+id/step1_frag_email"
+    android:id="@+id/step1_frag"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    class="com.example.z.helloworld.fragments.VersionFragment.SimpleTextInputCellFragment"
+    android:name="com.example.z.helloworld.fragments.VersionFragment.ForgetPasswordFragment"
     tools:layout="@layout/fragment_inputcell_simpletext"
     />
     <Button
