--- a/app/src/main/res/layout/list_view_item.xml
+++ b/app/src/main/res/layout/list_view_item.xml
@@ -1,33 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:layout_gravity="center"
+
     >
-        <LinearLayout
 
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="60dp">
 
-            <ImageView
-                android:id="@+id/list_img"
-                android:src="@mipmap/ic_launcher"
-                android:layout_weight="0.3"
+
+            <com.example.z.helloworld.fragments.VersionFragment.pages.AvatarView
+                android:layout_gravity="top|left"
+                android:layout_weight="0.7"
+                android:id="@+id/list_avatar"
+                android:layout_width="80dp"
+                android:layout_height="80dp" />
+
+            <TextView
+                android:layout_gravity="bottom|left"
+                android:id="@+id/list_author"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent" />
+                android:layout_height="wrap_content"
+                android:text="author"
+                android:textSize="@dimen/list_author_size"/>
 
             <LinearLayout
-                android:layout_weight="0.7"
-                android:orientation="vertical"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent">
+                android:layout_marginLeft="90dp"
+                android:layout_marginBottom="@dimen/list_author_size"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+                <TextView
+                    android:id="@+id/list_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/list_title_size"
+                    android:text="title" />
+
                 <TextView
                     android:id="@+id/list_txt"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="dsfsfsfsff"/>
-
+                    android:text="sjfdjslfjsdljfkl"
+                    android:textSize="@dimen/list_author_size"/>
             </LinearLayout>
 
-        </LinearLayout>
+
+        <TextView
+            android:layout_gravity="bottom|right"
+            android:id="@+id/list_cteate_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="2016-12-13 17:16:58"
+            android:textSize="@dimen/list_author_size"/>
+
+
+
 </FrameLayout>
