--- a/app/src/main/res/layout/activity_feed_content.xml
+++ b/app/src/main/res/layout/activity_feed_content.xml
@@ -3,10 +3,31 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.example.z.helloworld.fragments.VersionFragment.pages.AvatarView
-        android:id="@+id/feed_content_avatar"
-        android:layout_width="wrap_content"
-        android:layout_height="118dp" />
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="80dp">
+        <com.example.z.helloworld.fragments.VersionFragment.pages.AvatarView
+            android:id="@+id/feed_content_avatar"
+            android:layout_width="95dp"
+            android:layout_height="match_parent" />
+        <Button
+            android:id="@+id/feed_btn_collect"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="收藏"/>
+        <Button
+            android:id="@+id/feed_btn_opt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="点赞"/>
+        <Button
+            android:id="@+id/feed_btn_goto_comment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="评论"/>
+    </LinearLayout>
+
 
     <TextView
         android:textSize="@dimen/list_title_size"
@@ -27,12 +48,48 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="2016-12-14 9:35:58"/>
-    <TextView
-        android:textSize="@dimen/list_title_size"
-        android:id="@+id/feed_content_text"
+
+    <ScrollView
+        android:layout_weight="0.37"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+            <TextView
+                android:layout_gravity="top"
+                android:textSize="@dimen/list_title_size"
+                android:id="@+id/feed_content_text"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="内容测试个，fdskdlsgjjgklj两节课了圣诞节付款了好骚等加了打勾了"/>
+
+    </ScrollView>
+
+<!--评论-->
+    <LinearLayout
+        android:id="@+id/feed_content_lineLayout"
+        android:visibility="invisible"
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="内容测试个，fdskdlsgjjgklj两节课了圣诞节付款了好骚等加了打勾了"/>
+        android:layout_gravity="bottom">
+        <TextView
+            android:layout_width="1dp"
+            android:layout_height="1dp"
+            android:visibility="invisible"
+            android:selectAllOnFocus="true"/>
+        <EditText
+            android:layout_weight="0.8"
+            android:id="@+id/feed_edi_comment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="要吐槽来这里~~" />
 
+        <Button
+            android:layout_weight="0.2"
+            android:layout_gravity="right|bottom"
+            android:id="@+id/feed_btn_comment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="评论"/>
+    </LinearLayout>
 </LinearLayout>
