--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="list_author_size">16dp</dimen>
     <dimen name="list_title_size">20dp</dimen>
+    <dimen name="switch_bar_size">30dp</dimen>
 </resources>
